# tumbler

./: .clang-format  .cppcheck-false-positives  .gitignore  .scan-build-false-positives  AUTHORS  CODING_STYLE  ChangeLog  Makefile.am  NEWS  README  README.md  TODO  acinclude.m4  autogen-gnome.sh  autogen-xfce.sh  autogen.sh  configure.ac  configure.in.in  meson.build  meson_options.txt  module.xml
docs/: Makefile.am
docs/reference/: Makefile.am
docs/reference/tumbler/: Makefile.am  meson.build  tumbler-docs.xml  tumbler-docs.xml.in  tumbler-sections.txt  tumbler.types
icons/: Makefile.am  meson.build
icons/32x32/: Makefile.am
icons/64x64/: Makefile.am
m4/: xdt-features.m4
plugins/: Makefile.am  meson.build
plugins/cover-thumbnailer/: Makefile.am  cover-thumbnailer-plugin.c  cover-thumbnailer-provider.c  cover-thumbnailer-provider.h  cover-thumbnailer.c  cover-thumbnailer.h
plugins/desktop-thumbnailer/: Makefile.am  desktop-thumbnailer-plugin.c  desktop-thumbnailer-provider.c  desktop-thumbnailer-provider.h  desktop-thumbnailer.c  desktop-thumbnailer.h
plugins/ffmpeg-thumbnailer/: Makefile.am  ffmpeg-thumbnailer-plugin.c  ffmpeg-thumbnailer-provider.c  ffmpeg-thumbnailer-provider.h  ffmpeg-thumbnailer.c  ffmpeg-thumbnailer.h
plugins/folder-thumbnailer/: Makefile.am  folder-thumbnailer-plugin.c  folder-thumbnailer-provider.c  folder-thumbnailer-provider.h  folder-thumbnailer.c  folder-thumbnailer.h
plugins/font-thumbnailer/: Makefile.am  font-thumbnailer-plugin.c  font-thumbnailer-provider.c  font-thumbnailer-provider.h  font-thumbnailer.c  font-thumbnailer.h
plugins/gepub-thumbnailer/: Makefile.am  gepub-thumbnailer-plugin.c  gepub-thumbnailer-provider.c  gepub-thumbnailer-provider.h  gepub-thumbnailer.c  gepub-thumbnailer.h
plugins/gst-thumbnailer/: Makefile.am  gst-helper.c  gst-helper.h  gst-thumbnailer-plugin.c  gst-thumbnailer-provider.c  gst-thumbnailer-provider.h  gst-thumbnailer.c  gst-thumbnailer.h
plugins/jpeg-thumbnailer/: Makefile.am  jpeg-thumbnailer-plugin.c  jpeg-thumbnailer-provider.c  jpeg-thumbnailer-provider.h  jpeg-thumbnailer.c  jpeg-thumbnailer.h
plugins/odf-thumbnailer/: Makefile.am  odf-thumbnailer-plugin.c  odf-thumbnailer-provider.c  odf-thumbnailer-provider.h  odf-thumbnailer.c  odf-thumbnailer.h
plugins/pixbuf-thumbnailer/: Makefile.am  pixbuf-thumbnailer-plugin.c  pixbuf-thumbnailer-provider.c  pixbuf-thumbnailer-provider.h  pixbuf-thumbnailer-thumbnailer.c  pixbuf-thumbnailer-thumbnailer.h  pixbuf-thumbnailer.c  pixbuf-thumbnailer.h
plugins/poppler-thumbnailer/: Makefile.am  poppler-thumbnailer-plugin.c  poppler-thumbnailer-provider.c  poppler-thumbnailer-provider.h  poppler-thumbnailer.c  poppler-thumbnailer.h
plugins/raw-thumbnailer/: Makefile.am  raw-thumbnailer-plugin.c  raw-thumbnailer-provider.c  raw-thumbnailer-provider.h  raw-thumbnailer.c  raw-thumbnailer.h
plugins/rsvg-thumbnailer/: Makefile.am  rsvg-thumbnailer-plugin.c  rsvg-thumbnailer-provider.c  rsvg-thumbnailer-provider.h  rsvg-thumbnailer.c  rsvg-thumbnailer.h
plugins/webkit-thumbnailer/: Makefile.am  webkit-thumbnailer-plugin.c  webkit-thumbnailer-provider.c  webkit-thumbnailer-provider.h  webkit-thumbnailer.c  webkit-thumbnailer.h
plugins/webp-thumbnailer/: Makefile.am  webp-thumbnailer-plugin.c  webp-thumbnailer-provider.c  webp-thumbnailer-provider.h  webp-thumbnailer.c  webp-thumbnailer.h
plugins/xdg-cache/: Makefile.am  meson.build  xdg-cache-cache.c  xdg-cache-cache.h  xdg-cache-plugin.c  xdg-cache-provider.c  xdg-cache-provider.h  xdg-cache-thumbnail.c  xdg-cache-thumbnail.h
po/: LINGUAS  POTFILES.in  ar.po  ast.po  be.po  bg.po  bn.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  he.po  hi.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  is.po  it.po  ja.po  ka.po  kab.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  (+26 more)
tumbler/: .clang-format  Makefile.am  main.c  meson.build  org.xfce.Tumbler.service.in  tumbler-1.pc.in  tumbler-abstract-thumbnailer.c  tumbler-abstract-thumbnailer.h  tumbler-builtin-thumbnailer.c  tumbler-builtin-thumbnailer.h  tumbler-builtin-thumbnailers.c  tumbler-builtin-thumbnailers.h  tumbler-cache-plugin.c  tumbler-cache-plugin.h  tumbler-cache-provider.c  tumbler-cache-provider.h  tumbler-cache.c  tumbler-cache.h  tumbler-config.c  tumbler-config.h.in  tumbler-enum-types.c  tumbler-enum-types.h  tumbler-error.h  tumbler-file-info.c  tumbler-file-info.h  tumbler-glib-extensions.h  tumbler-manager.c  tumbler-manager.h  tumbler-marshal.list  tumbler-naive-scheduler.c  tumbler-naive-scheduler.h  tumbler-png-thumbnail-info.c  tumbler-png-thumbnail-info.h  tumbler-provider-factory.c  tumbler-provider-factory.h  tumbler-provider-plugin.c  tumbler-provider-plugin.h  tumbler-registry.c  tumbler-registry.h  tumbler-scheduler.c  (+23 more)
tumblerd/: Makefile.am  main.c  meson.build  org.xfce.Tumbler.Cache1.service.in  org.xfce.Tumbler.Manager1.service.in  org.xfce.Tumbler.Thumbnailer1.service.in  org.xfce.Tumbler.service.in  org.xfce.TumblerCache.service.in  org.xfce.TumblerManager.service.in  org.xfce.TumblerThumbnailer.service.in  tumbler-builtin-thumbnailer.c  tumbler-builtin-thumbnailer.h  tumbler-builtin-thumbnailers.c  tumbler-builtin-thumbnailers.h  tumbler-cache-service-dbus.xml  tumbler-cache-service-dbus.xml.in  tumbler-cache-service.c  tumbler-cache-service.h  tumbler-cache.c  tumbler-cache.h  tumbler-component.c  tumbler-component.h  tumbler-group-scheduler.c  tumbler-group-scheduler.h  tumbler-lifecycle-manager.c  tumbler-lifecycle-manager.h  tumbler-lifo-scheduler.c  tumbler-lifo-scheduler.h  tumbler-manager-dbus.xml  tumbler-manager-dbus.xml.in  tumbler-manager.c  tumbler-manager.h  tumbler-marshal.list  tumbler-naive-scheduler.c  tumbler-naive-scheduler.h  tumbler-registry.c  tumbler-registry.h  tumbler-scheduler.c  tumbler-scheduler.h  tumbler-service-dbus.xml  (+12 more)
